@@ -22,17 +22,19 @@ FONT_MODE=1;
 ;height = 8 (normal), 9 (shadowed), 10 (outlined)
 FONT_WIDTH=8;
 FONT_HEIGHT=10;
+
+
 ;Lists
 CONTAINERLIST_TITLE_XY=7,112;
-CONTAINERLIST_TITLE_UNSELECTED_STRING="Folders";
-CONTAINERLIST_TITLE_UNSELECTED_COLOR=555588;
-CONTAINERLIST_TITLE_SELECTED_STRING=  "<Select Folder>";
-CONTAINERLIST_TITLE_SELECTED_COLOR=AAAAFF;
+CONTAINERLIST_TITLE_UNSELECTED_STRING="Playlists";
+CONTAINERLIST_TITLE_UNSELECTED_COLOR=44BBCC;
+CONTAINERLIST_TITLE_SELECTED_STRING=  "<Playlists>";
+CONTAINERLIST_TITLE_SELECTED_COLOR=88EEDD;
 ENTRIESLIST_TITLE_XY=147,112;
-ENTRIESLIST_TITLE_UNSELECTED_STRING="Songs";
-ENTRIESLIST_TITLE_UNSELECTED_COLOR=555588;
-ENTRIESLIST_TITLE_SELECTED_STRING=  "<Select Song>";
-ENTRIESLIST_TITLE_SELECTED_COLOR="AAAAFF;
+ENTRIESLIST_TITLE_UNSELECTED_STRING="Items";
+ENTRIESLIST_TITLE_UNSELECTED_COLOR=44BBCC;
+ENTRIESLIST_TITLE_SELECTED_STRING=  "<Select Items>";
+ENTRIESLIST_TITLE_SELECTED_COLOR="88EEDD;
 CONTAINERLIST_X_RANGE=7,127;
 CONTAINERLIST_Y_RANGE=132,224;
 ENTRIESLIST_X_RANGE=147,475;
@@ -40,34 +42,44 @@ ENTRIESLIST_Y_RANGE=132,224;
 LISTS_TITLE_COLOR=33CC33;
 ENTRIESLIST_COLOR=888888;
 SELECTED_ENTRY_COLOR=FFFFFF;
+
 ;Messages:
-PROGRAM_VERSION_XY=1,1;
-PROGRAM_VERSION_COLOR=FFFFFF;
-BUFFER_PERCENTAGE_XY=7,16;
+PROGRAM_VERSION_XY=7,1;
+PROGRAM_VERSION_COLOR=889988;
+
+BUFFER_PERCENTAGE_XY=195,64;
 BUFFER_PERCENTAGE_COLOR=FFFFFF;
+
 METADATA_X=7;
 METADATA_LEN=50;
-METADATA_Y_RANGE=27,48;
-METADATA_COLOR=FF00FF;
-METADATA_TITLE_COLOR=FFFFFF;
-STREAM_OPENING_XY=-1,16;
+METADATA_Y_RANGE=16,48;
+METADATA_COLOR=88EEDD;
+METADATA_TITLE_COLOR=889988;
+
+STREAM_OPENING_XY=-1,64;
 STREAM_OPENING_ERROR_XY=-1,16;
 STREAM_OPENING_SUCCESS_XY=-1,16;
 STREAM_OPENING_COLOR=FFFFFF;
 STREAM_OPENING_ERROR_COLOR=FFFFFF;
 STREAM_OPENING_SUCCESS_COLOR=FFFFFF;
-CLEAN_ON_NEW_STREAM_Y_RANGE=14,48;
+
+CLEAN_ON_NEW_STREAM_Y_RANGE=19,48;
+
 ACTIVE_COMMAND_XY=-1,64;
 ACTIVE_COMMAND_COLOR=00BBAA;
-ERROR_MESSAGE_XY=7,80;
+
+ERROR_MESSAGE_XY=7,39;
 ERROR_MESSAGE_COLOR=999955;
+
 NETWORK_ENABLING_XY=-1,240;
 NETWORK_DISABLING_XY=-1,240;
 NETWORK_READY_XY=-1,240;
 NETWORK_ENABLING_COLOR=00BBAA;
 NETWORK_DISABLING_COLOR=FF0000;
 NETWORK_READY_COLOR=00BBAA;
-CLOCK_XY=344,1;
-CLOCK_COLOR=FFFFFF;
+
+CLOCK_XY=355,1;
+CLOCK_COLOR=88EEDD;
+
 BATTERY_XY=420,1;
-BATTERY_COLOR=FFFFFF;
+BATTERY_COLOR=88EEDD;
