@@ -7,6 +7,8 @@ NEW FEATURES
 (sandberg) 3DUI: Both messages and errors are now displayed using the native panels, scaled to fit the message length. (r748)
 (sandberg) 3DUI: Support for colored native panels has been added, which is used for the message and error panels. (r748)
 (raf) TextUI: Now clock format is still compatible and configurable as in 0.37-Final. New mode added (0). If set to that in the config file, then the format is retrieved from the system configuration. (r752)
+(raf) Core: Now MP3 report the current elapsed time (r755)
+(raf) TextUI: Added support to display current (implemented) and total (not implemented) time of the playing stream. (r755)
 BUG FIXES
 (sandberg) Core/3DUI: Rearranged the order of the VBlank operations to remove some of the jitter on the UI. (r745)
 (sandberg) Core: [ Bug #6256 ] WiFi logging is always enabled (r754)
